fix:  overflow - hidden

--- a/din-ballyhoo-app/client/app/EntityPageCSS/EntityPage.module.css
+++ b/din-ballyhoo-app/client/app/EntityPageCSS/EntityPage.module.css
@@ -1,3 +1,8 @@
+.pageWrapper {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 .entityCover {
   justify-content: center;
   display: inline-block;
